<?xml version="1.0"?>
<package>
  <name>operater</name>
  <version>0.1.0</version>
  <description>

     operater

  </description>
  <maintainer email="shuaipengliu@gmail.com">shuaipengliu</maintainer>
  <author>shuaipengliu</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>little_ant_msgs</build_depend>
  <run_depend>little_ant_msgs</run_depend>
  <build_depend>ant_math</build_depend>
  <run_depend>ant_math</run_depend>
  <build_depend>state_detection</build_depend>
  <run_depend>state_detection</run_depend>
  <build_depend>gps_msgs</build_depend>
  <run_depend>gps_msgs</run_depend>

 
</package>
